--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@ body {
 }
 
 *::-webkit-scrollbar {
-  width: 4px;
+  width: 6px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #1f2937;
+  background-color: #F9A826;
 }
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #3d4d63;
+  background-color: #a36c15;
   cursor: pointer;
 }
