--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  scroll-behavior: smooth;
-}
-
+/* Change the scrollbar */
 *::-webkit-scrollbar {
   width: 6px;
 }
